# wasm_sandbox

./: Cargo.toml  README.md  index.html  main.go  main.wasm  sample1.rs
.github/workflows/: build_wasm.yml
pkg/: package.json  wasm_sandbox.d.ts  wasm_sandbox.js  wasm_sandbox_bg.wasm  wasm_sandbox_bg.wasm.d.ts
src/: fibonacci.rs  lib.rs
