[package]
name = "wasm_sandbox"
version = "0.1.0"
authors = ["YUUKIToriyama <ytoriyama@torisfactory.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.50"
features = [
	"Document",
	"Element",
	"HtmlElement",
	"Node",
	"Window",
	"console"
]