[package]
name = "wasm_sandbox"
version = "0.1.0"
authors = ["YUUKIToriyama <ytoriyama@torisfactory.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.50"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.50"
features = [
	# DOM操作に必要
	"Document",
	"Element",
	"HtmlElement",
	"Node",
	"Window",
	# Canvas操作に必要
	'CanvasRenderingContext2d',
	'HtmlCanvasElement',
	# console.log()を用いるために必要
	"console"
]